* added emailaddressmapper attribute. Patch by Esa Laine

FileSystem Sourcecontrol
----------------------
* Fixed bug where FS was reporting the wrong path for modifications. Patch by Randy Coulman.

FTP support
----------------------
* Added CurrentBuildStatusFTPBootstrapper and CurrentBuildStatusFTPPublisher. Submitted by Matt Albrecht
* Also added an FTPPublisher. (Submitted by Matt Albrecht)

JMX Interface
----------------------
* Added a halt operation on the CruiseControl process JMX interface. Patch from Matt Albrecht
* Renamed start operation to resume.
* Renamed stop operation to pause.

logfile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

main.jsp & navigation.jsp
----------------------
* Fix for compatability with Tomcat 5.0. Patch from Robert Pearse
* Include sub-jsps instead of having all the content in main.jsp

Modification Set
----------------------
* Changed to instruct CC to do a build if a modification occurs in the future. Patch by Geoff Krapf

Project
----------------------
* add descriptive toString so JMX view of CruiseControlManager shows status for each project - Patch by Matt Albrecht
* fixed to allow changing build interval from JMX interface. Project was reloading the original value from Schedule, overwriting any change a user had made in the JMX interface.
* Last Build and Last Good Build are now passed to the builders (cclastbuildtimestamp and cclastgoodbuildtimestamp respectively)

SametimeAnnouncementPublisher
----------------------
* New publisher implementation to publish build results to IBM/Lotus Sametime server. Contributed by Richard Lewis-Shell.

SVN
----------------------
* fix to use execute on Commandline object instead of just using getCommandline() - Patch by Etienne Studer
* updated to use new date format (Subversion 0.37 and later) Patch by Garrick Olson

TabSheetTag
----------------------